raw_cppcheck/195334_report.txt
box_code_meta.c:6:2: error: There is an unknown macro here somewhere. Configuration is required. If ISOM_DECREASE_SIZE is a macro then please configure it. [unknownMacro]
 ISOM_DECREASE_SIZE(ptr, 2)
 ^
nofile:0:0: information: Active checkers: There was critical errors (use --checkers-report=<filename> to see details) [checkersReport]

